# face_rec

./: CMakeLists.txt  README.md  main.cpp
docs/: dlib.md
test/: test.cpp  test2.cpp
